--- a/ContainmentCache/build.gradle
+++ b/ContainmentCache/build.gradle
@@ -12,6 +12,7 @@ dependencies {
 	compile 'com.google.guava:guava:18.0'
 	compile 'commons-collections:commons-collections:3.2.1'
 	compile 'org.apache.commons:commons-lang3:3.0'
+	compile 'org.apache.commons:commons-math3:3.4.1'
 	
 	testCompile 'junit:junit:4.11'
 }
