--- a/ContainmentCache/build.gradle
+++ b/ContainmentCache/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 	compile 'commons-collections:commons-collections:3.2.1'
 	compile 'org.apache.commons:commons-lang3:3.0'
 	compile 'org.apache.commons:commons-math3:3.4.1'
+	compile 'net.jcip:jcip-annotations:1.0'
 	
 	testCompile 'junit:junit:4.11'
 }
