--- a/ContainmentCache/build.gradle
+++ b/ContainmentCache/build.gradle
@@ -20,6 +20,10 @@ dependencies {
 	compile 'commons-collections:commons-collections:3.2.1'
 	compile 'org.apache.commons:commons-lang3:3.0'
 	compile 'org.apache.commons:commons-math3:3.4.1'
+	
+	
+	compile 'org.slf4j:slf4j-api:1.7.7'
+	compile 'org.projectlombok:lombok:1.14.8'
 	compile 'net.jcip:jcip-annotations:1.0'
 	
 	testCompile 'junit:junit:4.11'
