--- a/ContainmentCache/build.gradle
+++ b/ContainmentCache/build.gradle
@@ -17,7 +17,7 @@ targetCompatibility = 1.8
 
 dependencies {
 	compile 'com.google.guava:guava:18.0'
-	compile 'commons-collections:commons-collections:3.2.1'
+	compile 'org.apache.commons:commons-collections4:4.0'
 	compile 'org.apache.commons:commons-lang3:3.0'
 	compile 'org.apache.commons:commons-math3:3.4.1'
 	
