--- a/ContainmentCache/build.gradle
+++ b/ContainmentCache/build.gradle
@@ -1,16 +1,18 @@
-repositories {
-	    mavenLocal()
-	    mavenCentral()
-}
-
 apply plugin: 'java'
+apply plugin: "maven"
+
+repositories {
+    mavenLocal()
+    mavenCentral()
+}
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
 }
 
 //Project properties.
-version = 0.91
+version = '0.9.2'
+group = 'ca.ubc.cs.beta'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -21,7 +23,7 @@ dependencies {
 	compile 'org.apache.commons:commons-lang3:3.0'
 	compile 'org.apache.commons:commons-math3:3.4.1'
 	
-	
+    compile 'ch.qos.logback:logback-classic:1.0.13'
 	compile 'org.slf4j:slf4j-api:1.7.7'
 	compile 'org.projectlombok:lombok:1.14.8'
 	compile 'net.jcip:jcip-annotations:1.0'
@@ -29,6 +31,14 @@ dependencies {
 	testCompile 'junit:junit:4.11'
 }
 
+test {
+     beforeTest { descriptor ->
+         logger.lifecycle(System.lineSeparator + "Running test: " + descriptor)
+     }
+     testLogging {
+         events "passed", "skipped", "failed", "standardError"
+     }
+}
 
 
 //Publishing to EARG maven repo.
